# ai-trade-execution-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: evaluation.yml
docs/: API.md  ARCHITECTURE.md  EVALUATION.md  SECURITY.md
examples/: README.md  basic_analysis.py  batch_analysis.py  cost_monitoring.py  evaluation_run.py  generate_dataset.py  sample_fix_messages.json  sample_fix_messages.txt  with_caching.py
src/: __init__.py  config.py  pipeline.py
src/agents/: __init__.py  analyzer.py  cache.py  llm_client.py  prompts.py  response_parser.py
src/cli/: __init__.py  __main__.py  cache_cli.py  cost_cli.py
src/evaluation/: __init__.py  __main__.py  ground_truth.py  matching.py  metrics.py  reporting.py  runner.py  validator.py
src/evaluation/datasets/: README.md  ground_truth.json
src/observability/: __init__.py  context.py  cost_tracker.py  metrics.py  tracing.py
src/parsers/: __init__.py  exceptions.py  fix_parser.py  models.py
src/review/: __init__.py  __main__.py  agreement.py  alerts.py  cli.py  disagreements.py  models.py  queue.py  storage.py
tests/: __init__.py  test_analyzer.py  test_cache.py  test_config.py  test_cost_tracker.py  test_fix_parser.py  test_ground_truth.py  test_llm_client.py  test_matching.py  test_metrics.py  test_models.py  test_pipeline.py  test_prompts.py  test_reporting.py  test_response_parser.py  test_review.py  test_runner.py  test_setup.py  test_tracing.py  test_validator.py
tests/fixtures/: edge_cases.txt  invalid_messages.txt  valid_messages.txt
tests/observability/: test_context.py  test_metrics.py
tests/review/: test_agreement.py  test_alerts.py  test_disagreements.py
